syntax = "proto3";

option go_package = "github.com/DIMO-Network/attestation-api/pkg/grpc";

package grpc;

service AttestationService {
  rpc EnsureVinVc(EnsureVinVcRequest) returns (EnsureVinVcResponse);
  rpc GetVinVcLatest(GetLatestVinVcRequest) returns (GetLatestVinVcResponse);
}

message EnsureVinVcRequest {
  uint32 token_id = 1;
  bool force = 2;
}

message EnsureVinVcResponse { }

message GetLatestVinVcRequest {
  uint32 token_id = 1;
}

message GetLatestVinVcResponse {
  string raw_vc = 1;
}
